# fetch

./: .gitignore  Cargo.toml  NOTES.md  README  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yaml  release.yaml
logo/: logo.xcf
snap/: snapcraft.yaml
src/: args.rs  logger.rs  main.rs
test/: basic.bats  test-proxy.bats  test-server.bats
test-utils/proxy-server/src/: main.rs
test-utils/test-server/: Cargo.toml
test-utils/test-server/src/: cert.pem  key.pem  main.rs
