[package]
name = "fetch"
description = "Command line tool to download and verify files"
keywords = ["download", "checksum", "sha256", "md5", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/falk-werner/fetch"
repository = "https://github.com/falk-werner/fetch"
version = "1.0.0"
authors = ["Falk Werner"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
hex = "0.4.3"
log = "0.4.29"
md-5 = "0.11.0"
reqwest = { version = "0.12.28", features = ["multipart", "stream", "rustls-tls"] }
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["macros", "rt", "rt-multi-thread"] }

[package.metadata.deb]
maintainer = "Falk Werner"
copyright = "2025, Falk Werner"
